Fix spacing for member preview dates [WEB-687]

--- a/frontend/scss/molecules/_m-article-header.scss
+++ b/frontend/scss/molecules/_m-article-header.scss
@@ -209,13 +209,7 @@
   padding-bottom: 10px;
   width: fit-content;
 
-  @include breakpoint('small') {
-    margin-top: 34px;
-    margin-bottom: -64px;
-    border-bottom: 1px solid #6f2562;
-  }
-
-  @include breakpoint('xsmall') {
+  @include breakpoint('small-') {
     margin-top: 34px;
     margin-bottom: -50px;
     border-bottom: 1px solid #6f2562;
